Upgrade to MUN Mainnet

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -2,7 +2,7 @@
   "en": "English",
   "zht": "中文",
   "bigDipper": "Big Dipper",
-  "forbole": "Mun",
+  "mun": "Mun",
   "copyright": "<0>License</0> © Mun",
   "donate": "Donate",
   "about": "About",
